# waybar_now_playing

./: Cargo.toml  README.md  nohup.out
src/: lib.rs  main.rs
